# rust_discord_bot

./: .gitignore  Cargo.toml  README.md
src/: main.rs  structs.rs
