[package]
name = "rust_discord_bot"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
strip = true

#[target.aarch64-unknown-linux-gnu]
#linker = "aarch64-linux-gnu-gcc"

# [workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# # Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
# pre-build = [
#     "dpkg --add-architecture $CROSS_DEB_ARCH",
#     "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
# ]

[dependencies]
serenity = { version = "0.12.2", features = ["client", "rustls_backend"] }
dotenv = "0.15.0"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
base64 = "0.22.1"
#openssl = { version = "0.10.66", features = ["vendored"] }
