[package]
name = "rust_discord_bot"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
strip = true

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

[dependencies]
serenity = { version = "0.12.2", features = ["client", "rustls_backend"] }
dotenv = "0.15.0"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
base64 = "0.22.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
